# language-cl-c

./: LICENSE  README.md  language-cl-c.cabal
Data/: Dependencies.hs  Scope.hs
Language/CL/: C.hs
Language/CL/C/: CodeGen.hs  StdLib.hs  Types.hs
Language/CL/C/CodeGen/: Mangling.hs  Pretty.hs  ProgRepr.hs  TypeRepr.hs
Language/CL/C/HOAS/: AST.hs  Naming.hs  Sugar.hs
Language/CL/C/Types/: Classes.hs  Pointer.hs  Scalar.hs  Vector.hs
