name:                  language-cl-c
version:               0.1
synopsis:              Embedded OpenCL C 
description:           Provides EDSL for OpenCL C Language deep embedded in Haskell. 
                       It can be used as backend for runtime code generation in convenient typesafe way.
license:               MIT
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <sta.cs.vsu@gmail.com>
copyright:             (c) 2012, Sam T.
category:              Language
build-type:            Simple
cabal-version:         >=1.8

source-repository head
  type:                git
  location:            https://github.com/fmap/language-cl-c.git

library
  exposed-modules:     Language.CL.C
                       Language.CL.C.CodeGen

  other-modules:       Data.Scope
                       Data.Dependencies

                       Language.CL.C.Types
                       Language.CL.C.Types.Classes
                       Language.CL.C.Types.Scalar
                       Language.CL.C.Types.Vector
                       Language.CL.C.Types.Pointer
--                       Language.CL.C.CodeGen
                       Language.CL.C.CodeGen.Mangling
                       Language.CL.C.CodeGen.Pretty
                       Language.CL.C.CodeGen.ProgRepr
                       Language.CL.C.CodeGen.TypeRepr
                       Language.CL.C.HOAS.AST
                       Language.CL.C.HOAS.Naming
                       Language.CL.C.HOAS.Sugar

  build-depends:       array            == 0.4.*
                     , base             == 4.5.*
                     , containers       == 0.4.*
                     , mtl              == 2.1.*
                     , pretty           == 1.1.*
                     , template-haskell == 2.7.*
                     , vector-space     == 0.8.*

  ghc-options:       -O3 -Wall 
  ghc-prof-options:  -auto-all
